<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/model"
                />
        <TextView
                android:id="@+id/text_view_model"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint=""
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/color"
                />
        <TextView
                android:id="@+id/text_view_color"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint=""
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/number"
                />
        <TextView
                android:id="@+id/text_view_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint=""
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                />
        <TextView
                android:id="@+id/text_view_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:inputType="phone"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                />
        <TextView
                android:id="@+id/text_view_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/box"
                />
        <TextView
                android:id="@+id/text_view_box"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        <Spinner android:id="@+id/spinner_time"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                />

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                >
            <Button android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    android:onClick="onClickDelete"
                    />
            <Button android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit"
                    android:onClick="onClickEdit"
                    />
        </LinearLayout>
        <Button android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:onClick="onClickCancel"
                />
    </LinearLayout>
</ScrollView>