<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/model"
                />
        <EditText
                android:id="@+id/edit_text_model"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint=""
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/color"
                />
        <EditText
                android:id="@+id/edit_text_color"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint=""
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/number"
                />
        <EditText
                android:id="@+id/edit_text_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint=""
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                />
        <EditText
                android:id="@+id/edit_text_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:inputType="phone"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                />
        <Spinner android:id="@+id/spinner_time"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                />
        <LinearLayout android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                >
            <Button android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:onClick="onClickCancel"
                    />
            <Button android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:onClick="onClickOk"
                    />
        </LinearLayout>
    </LinearLayout>
</ScrollView>